# archipelago

./: .gitignore  CMakeLists.txt  CODINGSTYLE  COPYRIGHT  Changelog  Makefile  README.md  devflow.conf  make_install_file.sh  make_pkg.sh  setup.py  update_version.py  version
arch-scripts/: grep_xseg.sh  init.sh  make_xseg.sh
bash_completion/: archipelago  vlmc
ci/: archiptest.py  autopkg_debian.sh  ceph.conf  ceph.list  cluster.py  config  dev-grnet.list  tests.sh
conf/: CMakeLists.txt  Makefile  archipelago.conf  archipelago.conf.rados_example  logging.conf
contrib/: finalize_upgrade_0.4
debian/: README  archipelago-dbg.lintian-overrides  archipelago-ganeti.install  archipelago-ganeti.lintian-overrides  archipelago-kernel-dkms.dkms  archipelago-kernel-dkms.install  archipelago-kernel-dkms.install.in  archipelago-kernel-dkms.lintian-overrides  archipelago-kernel-dkms.postinst  archipelago-kernel-dkms.prerm  archipelago-modules-dkms.dkms  archipelago-modules-dkms.install.in  archipelago-modules-dkms.lintian-overrides  archipelago-modules-dkms.prerm  archipelago-modules-source.install  archipelago-modules-source.lintian-overrides  archipelago-rados.install  archipelago-rados.lintian-overrides  archipelago.conffiles  archipelago.copyright  archipelago.default  archipelago.init.d  archipelago.install  archipelago.lintian-overrides  archipelago.logrotate  archipelago.postinst  archipelagos-ganeti.install  archipelagos-ganeti.lintian-overrrides  archipelagos-kernel-dkms.dkms  archipelagos-kernel-dkms.install  archipelagos-kernel-dkms.lintian-overrides  archipelagos.default  archipelagos.install  archipelagos.lintian-overrides  changelog  control  control.in  copyright  gbp.conf  install  (+9 more)
debian/archipelago-modules-source-files/: control.in  install.in  rules
debian/archipelagos-kernel-dkms-files/: Makefile
devtools/: c_bsd.licence  c_gpl.licence  check_licence.py  python_bsd.licence  python_gpl.licence
docs/: admin-guide.rst  administration_guide.rst  archipelago.rst  archipelago_deploy.rst  conf.py  index.rst  install-guide.rst
docs/design/: basic_building_blocks  design_cached_flows.rst  design_cached_namespaces.rst  design_entities.rst  design_mapfile_v3.rst  design_xindex.rst  design_xseg_signals.rst  flows.rst  gc.rst  index.rst
docs/upgrades/: archipelago_upgrade_v04.rst  index.rst  upgrade-0.4.rst  upgrade-0.4rc2.rst
ganeti/: CMakeLists.txt
ganeti/ext_scripts/: CMakeLists.txt  parameters.list  vlmc_wrapper.py
ganeti/ganeti-hooks/: CMakeLists.txt
ganeti/ganeti-hooks/instance-failover-pre.d/: archip-lockvolumes
ganeti/ganeti-hooks/instance-migrate-pre.d/: archip-openvolumes
ganeti/ganeti-hooks/instance-start-pre.d/: archip-lockvolumes
python/: CMakeLists.txt  Makefile  setup.py  version.sh
python/archipelago/: archipelago.py  blktap.py  cli.py  common.py  vlmc.py
src/: .gitignore  CMakeLists.txt  Makefile  Makefile.top  base.mk  bench-lfsr.c  bench-lfsr.h  bench-report.c  bench-timer.c  bench-utils.c  bench-verify.c  bench-xseg.c  bench-xseg.h  common.c  common.h  dummy.c  filed.c  filed.h  hash.c  hash.h  mapper-handling.c  mapper-version0.c  mapper-version0.h  mapper-version1.c  mapper-version1.h  mapper-version2.c  mapper-version2.h  mapper-versions.c  mapper-versions.h  mapper.c  mapper.h  monitor.c  mt-sosd.c  mt-vlmcd.c  peer.c  peer.h  poold.cc  radosd.c
src/bench/: bench-report.c  bench-verify.c
src/dummy/: dummy.c
src/filed/: filed.c
src/include/: bench-lfsr.h  common.h  filed.h  logger.h  mapper-version2.h  mapper-versions.h  peer.h
src/include/poold/: epoll.hh  logger.hh  sighandler.hh  system.hh
src/mapperd/: mapper-version1.c  mapper.c
src/poold/: CMakeLists.txt  epoll.cc  logger.cc  logger.hh  poold.cc  poold.hh  sighandler.cc  socket.cc  socket.hh  system.cc
src/util/: logger_wrap.cc
src/vlmcd/: mt-vlmcd.c
tests/: basictest.py  stress_test.sh  tests.py
tools/: Makefile
tools/archipelago/archipelago/: archipelago.py  vlmc.py
tools/ganeti-hooks/: Makefile
xseg/: .gitignore  Makefile  archipelago  archipelagos  base.mk  bench-report.c  bench-xseg.c  config.env  config.mk  dummy.c  envsetup  launch  mapper-version1.h  mapper-versions.c  monitor.c
xseg/conf/: archipelago.conf  archipelago.conf.rados_example
xseg/doc/: components.rst  flow.txt
xseg/drivers/: Makefile  xseg_posix.c  xseg_posix.h  xseg_posixfd.h  xseg_pthread.h  xseg_segdev.h  xseg_xsegdev.c
xseg/drivers/kernel/: Makefile  xseg_posix.c  xseg_pthread.c  xseg_segdev.c
xseg/drivers/user/: Makefile  xseg_posix.c  xseg_posixfd.c  xseg_pthread.c  xseg_segdev.c
xseg/lib/: .gitignore
xseg/lib/user/: README
xseg/peers/: .gitignore  Makefile  blockd.c  filed.c  sosd.c  vlmcd.c  xseg-tool.c
xseg/peers/kernel/: Makefile  xsegbd.c  xsegbd.h
xseg/peers/user/: .gitignore  Makefile  bench-lfsr.c  bench-lfsr.h  bench-report.c  bench-timer.c  bench-utils.c  bench-verify.c  bench-xseg.c  bench-xseg.h  blockd.c  common.c  common.h  dummy.c  filed.c  hash.c  sosd  (+30 more)
xseg/qa/: stress_test.sh
xseg/sos/: Makefile
xseg/sys/: .gitignore  Makefile  domain.h  segtest.c  segtool.c  sha256.c  util.h  xseg_user.c  xsegbd.c  xsegbd.h  xsegdev.c  xsegdev.h  xsegmod.c
xseg/tools/: Makefile  archipelago  create_initializer  helpers.sh  vlmc  vlmc-blockd.py  vlmc-filed.py  vlmc.py  vlmc_shared.py  xseg-domain-targets  xseg_cleanup.sh  xseg_devshell.sh  xseg_setup.sh
xseg/util_libs/: Makefile
xseg/xq/: Makefile  domain.h  xlist.c  xq.c  xq.h  xq_exports.h  xq_lock.h  xq_lock_test.c  xq_test.c
xseg/xseg/: Makefile  domain.h  protocol.h  xseg.c  xseg.h  xseg_exports.h
xseg/xtypes/: Makefile  domain.h  xatomic.h  xbinheap.c  xbinheap.h  xbinheap_exports.h  xbinheap_test.c  xcache.c  xcache.h  xcache_exports.h  xcache_test.c  xhash.c  xhash.h  xhash_exports.h  xhash_test.c  xheap.c  xheap.h  xheap_exports.h  xheap_test.c  xlist.c  xlist.h  xlock.h  xobj.c  xobj.h  xobj_exports.h  xobj_test.c  xpool.c  xpool.h  xpool_exports.h  xpool_test.c  xq.c  xq.h  xq_exports.h  xq_lock_test.c  xq_test.c  xwaitq.c  xwaitq.h  xwaitq_exports.h  xwaitq_test.c  xwork.h  (+4 more)
(+53 files in other folders)
